--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,24 +5,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 @import url('https://fonts.cdnfonts.com/css/nexa');
 @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @font-face {
-    font-family: dogwood ;
+    font-family: dogwood;
     src: url("../Assets/font-family/Dogwood3.ttf");
 }
+
 :root {
-    --font-family:"Outfit", serif;
+    --font-family: "Outfit", serif;
     --font-family-DM: "DM Sans", serif;
     --font-family-nunito: "Nunito", serif;
     --font-family-play: "Play", serif;
     --font-family-nexa: 'Nexa', sans-serif;
-    --font-family-dogwood:dogwood;
+    --font-family-dogwood: dogwood;
     --font-family-kanit: "Kanit", serif;
-    --color1:#761114;
+    --color1: #761114;
     --para-color: #545454;
     --border-col: #1818182f;
     --bg-color: #1A1A1A;
     --color-round: rgba(220, 220, 220, 0.966);
-  }
+}
 
 body {
 
@@ -158,8 +160,7 @@ body {
 
 .main1 {
     position: relative;
-    min-height: 95vh !important;
-
+    min-height: 100svh !important;
     margin: 0px;
     padding: 0px;
 
@@ -168,7 +169,7 @@ body {
 
 @media (max-width:992px) {
     .main1 {
-        height: 120vh !important;
+        height: 150vh !important;
     }
 }
 
@@ -208,11 +209,13 @@ body {
     background-color: white;
     border: 2px solid var(--color1);
     transition: 0.9s ease-in-out !important;
-   
+
 }
-.text-jus{
+
+.text-jus {
     text-align: justify !important;
 }
+
 /* NAV-HOVER */
 .navhover {
     /* background-color: #bb9108 !important; */
@@ -312,6 +315,7 @@ body {
         padding: 5px !important;
     }
 }
+
 .banner-btn1 {
     border-radius: 5px;
     border: none !important;
@@ -337,7 +341,8 @@ body {
     justify-content: center;
 
     transition: transform 0.4s ease-in-out;
-    backface-visibility: hidden; /* Prevent flickering */
+    backface-visibility: hidden;
+    /* Prevent flickering */
 }
 
 .banner-btn {
@@ -345,18 +350,21 @@ body {
 }
 
 .banner-btn-hover {
-    transform: rotateX(90deg); /* Initially hidden */
+    transform: rotateX(90deg);
+    /* Initially hidden */
     transform-origin: top;
 }
 
 .banner-btn1:hover .banner-btn {
     transform: rotateX(90deg);
-    transition-delay: 0s; /* Rotate out immediately */
+    transition-delay: 0s;
+    /* Rotate out immediately */
 }
 
 .banner-btn1:hover .banner-btn-hover {
     transform: rotateX(0deg);
-    transition-delay: 0.2s; /* Show after 0.2s delay */
+    transition-delay: 0.2s;
+    /* Show after 0.2s delay */
 }
 
 .icon-fixeds {
@@ -388,7 +396,7 @@ body {
     bottom: 30% !important;
 }
 
-a:hover,button:hover{
+a:hover, button:hover {
     cursor: grabbing !important;
 }
 
@@ -518,11 +526,13 @@ select {
 input {
     color: white !important;
 }
-.form-control::placeholder{
+
+.form-control::placeholder {
     font-weight: 300 !important;
-    color:rgba(255, 255, 255, 0.658)!important;
+    color: rgba(255, 255, 255, 0.658) !important;
 }
-.form-control,.phonenum,select{
+
+.form-control, .phonenum, select {
     border: none !important;
     border-radius: 0% !important;
     border-bottom: 1px solid rgba(211, 211, 211, 0.349) !important;
@@ -779,11 +789,13 @@ footer {
     padding: 0px;
     background-color: var(--color1);
 }
-.fa-circle{
+
+.fa-circle {
     font-size: 6px !important;
 }
+
 .paraa-1 {
-text-align: justify;
+    text-align: justify;
     /* text-transform: capitalize; */
     font-weight: 600;
     font-size: 15px !important;
@@ -972,12 +984,14 @@ text-align: justify;
 .col-org {
     color: var(--color1) !important;
 }
-@media (max-width:992px) {
-    .phonenum{
-        width: calc(100vw - 30%) !important;
+
+/* @media (max-width:992px) {
+    .phonenum {
+        width: calc(60vw - 10%) !important;
     }
-    
-}
+
+} */
+
 .col-9> {
     font-family: var(--font-family-play) !important;
 }
@@ -1221,16 +1235,18 @@ text-align: justify;
 .fill-white {
     fill: white !important;
 }
-.i22{
+
+.i22 {
     background-position: center;
     object-fit: cover;
     background-size: cover;
     height: 250px;
     z-index: 1;
 }
+
 .btnhome {
     position: absolute;
-    bottom: 26px ;
+    bottom: 26px;
     padding: 5px 15px;
     border-radius: 20px;
     border: none;
@@ -1272,34 +1288,34 @@ text-align: justify;
     width: 80%;
     margin: auto;
     position: relative;
-    overflow: hidden; 
-  }
+    overflow: hidden;
+}
 
-  /* Slider wrapper */
-  .slider-wrapper {
+/* Slider wrapper */
+.slider-wrapper {
     display: flex;
-    transition: transform 1.5s ease-in-out; 
-  }
+    transition: transform 1.5s ease-in-out;
+}
 
-  /* Slider item styling */
-  .slider-item {
+/* Slider item styling */
+.slider-item {
 
     border-radius: 8px;
     padding: 10px;
     clip-path: polygon(0% 0%, 100% 0%, 99% 91%, 75% 91%, 75% 100%, 58% 91%, 0 90%);
-    min-width: 100%; 
+    min-width: 100%;
     height: 350px;
     margin-top: 20px;
     background-color: var(--color1);
-   display: flex;
-flex-direction: column;
-justify-content: space-around;
-   font-size: 24px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    font-size: 24px;
 
-  }
+}
 
-  /* Navigation buttons styling */
-  .prev, .next {
+/* Navigation buttons styling */
+.prev, .next {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -1308,73 +1324,73 @@ justify-content: space-around;
     border: none;
     padding: 10px;
     cursor: pointer;
-  }
+}
 
-  .prev {
+.prev {
     left: 10px;
-  }
+}
 
-  .next {
+.next {
     right: 10px;
-  }
+}
 
-  /* Optional: Add a little hover effect to buttons */
-  .prev:hover, .next:hover {
+/* Optional: Add a little hover effect to buttons */
+.prev:hover, .next:hover {
     background-color: rgba(0, 0, 0, 0.8);
-  }
-  .custom-navigation>button:hover{
+}
+
+.custom-navigation>button:hover {
     background-color: var(--color1) !important;
-  }
-  .custom-navigation>button{
+}
+
+.custom-navigation>button {
     padding: 15px;
-transition: 0.3s ease-in-out;
+    transition: 0.3s ease-in-out;
     border: none;
     color: white;
     border: 1px solid var(--para-color);
     background-color: transparent;
-  }
-  .contact_image{
+}
+
+.contact_image {
     background-size: cover;
     object-fit: cover;
     height: 70vh !important;
-  }
+}
 
-  /* MARQUEE START*/
-  /* Container for the scrolling effect */
-.marquee-container {
-    width: 100vw;
-    overflow: hidden;
-    background-color: #fff; /* Optional: background color for the scrolling container */
-    position: relative;
-  }
-  
-  .marquee-content {
+/* MARQUEE START*/
+/* Container for the scrolling effect */
+
+.marquee-content {
     display: flex;
     width: max-content;
-    animation: marquee  linear infinite;
+    animation: marquee linear infinite;
     animation-duration: 46s !important;
     animation-delay: 1s !important;
-  }
-  
+}
 
-  @keyframes marquee {
+
+@keyframes marquee {
     0% {
-      transform: translateX(100%);
+        transform: translateX(100%);
     }
-    100% {
-      transform: translateX(-100%); 
-    }
-  }
-  
-  .marquee-content img {
-    margin-right: 20px; 
-    max-height: 100px;
-    object-fit: contain; 
-  }
-  
-  /* MARQUE END */
-  /* MARQUE SLIDER START */
 
+    100% {
+        transform: translateX(-100%);
+    }
+}
+
+.marquee-content img {
+    margin-right: 20px;
+    max-height: 100px;
+    object-fit: contain;
+}
+
+/* MARQUE END */
+/* MARQUE SLIDER START */
+swiper-container{
+    width: 95vw !important;
+}
 
   swiper-slide {
     text-align: center;
@@ -1391,13 +1407,15 @@ transition: 0.3s ease-in-out;
     height: 100%;
     object-fit: cover;
   }
-  /* MARQUE SLIDER END */
 
-.form_ser>div>div>.form-control::placeholder{
+/* MARQUE SLIDER END */
 
-color: rgb(27, 27, 27) !important;
+.form_ser>div>div>.form-control::placeholder {
+
+    color: rgb(27, 27, 27) !important;
 }
-.form_ser>div>div>.form-control,.form_ser>div>div>.phonenum{
- border: 1px solid var(--border-col) !important;
- 
+
+.form_ser>div>div>.form-control, .form_ser>div>div>.phonenum {
+    border: 1px solid var(--border-col) !important;
+
 }
