--- a/CSS/style.css
+++ b/CSS/style.css
@@ -132,7 +132,8 @@ body {
 /* MEDIA QUIRES */
 
 .navbar {
-    background-color: rgb(255, 255, 255); 
+    background-color: rgba(255, 255, 255, 0.986) !important; 
+    backdrop-filter: blur(1220px);
     z-index: 1111 !important;
     position: absolute !important;
     top: 0%;
