--- a/CSS/style.css
+++ b/CSS/style.css
@@ -166,7 +166,10 @@ body {
 
 
 }
-
+.sw-image{
+    height: 100px !important; 
+    width: 250px;
+}
 @media (max-width:992px) {
     .main1 {
         height: 150vh !important;
