--- a/CSS/style.css
+++ b/CSS/style.css
@@ -25,7 +25,15 @@
     --bg-color: #1A1A1A;
     --color-round: rgba(220, 220, 220, 0.966);
 }
-
+/* LIGHT THEME */
+[data-theme="light"] {
+    --color1: #761114;
+    --para-color: #545454;
+    --border-col: #1818182f;
+    --bg-color: white;
+    --text-color: black; /* Light theme text color */
+}
+/* LIGHT THEME */
 body {
 
     background-color: #811f1000 !important;
@@ -133,13 +141,8 @@ body {
 
 .navbar {
     background-color: rgba(255, 255, 255, 0.986) !important;
-    backdrop-filter: blur(1220px);
     z-index: 1111 !important;
-    position: absolute !important;
-    top: 0%;
-    left: 0%;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.11);
-    transition: 0.4s ease-in-out !important;
+   transition: 0.4s ease-in-out !important;
 }
 
 .nav-item>a {
@@ -182,22 +185,15 @@ iframe {
     }
 }
 
-.banner-img-home {
-    height: 100% !important;
-}
-
 .banner-img {
-    position: absolute !important;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 90%;
     z-index: -1;
     object-fit: cover;
-    background-attachment: fixed !important;
     background-position: center;
     background-size: cover;
-    animation: fn 7.5s ease-in-out infinite;
+
+    top: 0%;
 }
 
 .main1 {
@@ -1194,12 +1190,11 @@ footer {
 }
 
 .home {
-    height: 78vh !important;
-    position: relative;
+    height: 100vh !important;
     background-position: right top;
     background-size: cover;
     object-fit: cover;
-
+position: relative;
 }
 
 .text-eni {
@@ -1233,19 +1228,7 @@ footer {
     }
 }
 
-.home-im {
-    object-fit: cover !important;
-    background-size: cover !important;
-    background-position: right !important;
-}
 
-.home-img {
-    z-index: -1;
-    background-size: cover;
-    object-fit: cover;
-    height: 85% !important;
-    position: absolute;
-}
 
 /*  */
 .fill-white {
@@ -1262,7 +1245,7 @@ footer {
 
 .btnhome {
     position: absolute;
-    bottom: 26px;
+    bottom: 67px;
     padding: 5px 15px;
     border-radius: 20px;
     border: none;
@@ -1282,14 +1265,7 @@ footer {
 
 }
 
-.h20 {
-    z-index: -1;
-    height: 80vh;
-    width: 100%;
-    background-repeat: no-repeat;
-    object-fit: cover;
-    background-position: center !important;
-}
+
 
 
 .phonenum {
