--- a/CSS/style.css
+++ b/CSS/style.css
@@ -922,7 +922,7 @@ footer {
 }
 
 .dropdown-menu {
-    padding: 14px !important;
+    padding:10px 5px !important;
     background-color: white !important;
 visibility: visible !important;
 opacity: 0;
@@ -1183,8 +1183,62 @@ opacity: 0;
     content: "" !important;
 
 }
+/* CHILD DROPDOWN CSS START */
+.dropdown-menu1{
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    background-color: white;
+    box-shadow: 2px black;
+transition: 0.6s ease-in-out;
+}
+.sub-dropdown-menu:hover{
+    display: block;
+}
+.sub-dropdown-menu{
+    display: none;
+    transition: 0.5s ease-in-out;
+}
+/* Position the Child Dropdown */
+.dropdown-submenu {
+    position: relative;
+  }
+  .dropdown-menu1>li>.dropdown-item:hover{
+background-color: var(--color1) !important;
+color: white !important;
+  }
+  .child-dropdown {
+    position: absolute;
+    left: 98%; 
+    top: 50% !important;
+    display: none; 
+    min-width: 200px;
+    border-radius: 5px;
+    background-color: #f8f9fa;
+  }
+  
+@media (max-width:992px) {
+    .child-dropdown {
+        position: absolute;
+    left: 30% !important; 
+        top: 10;
+        display: none; 
+        min-width: 200px;
+        border-radius: 5px;
+        background-color: #f8f9fa;
+      }
+      
+}
+  .dropdown-submenu:hover .child-dropdown {
+    display: block;
+  }
+  
 
-/* date picker */
+  .child-dropdown .dropdown-item {
+    padding: 8px 15px;
+    font-size: 14px;
+  }
+  
+/* CHILD DROPDOWN CSS END */
+
 
 .z-1 {
     z-index: -1;
