--- a/CSS/style.css
+++ b/CSS/style.css
@@ -179,15 +179,10 @@ iframe {
     width: 250px;
 }
 
-@media (max-width:992px) {
-    .main1 {
-        height: 150vh !important;
-    }
-}
 
 .banner-img {
     width: 100%;
-    height: 90%;
+ height: 90%;
     z-index: -1;
     object-fit: cover;
     background-position: center;
@@ -1243,10 +1238,28 @@ color: white !important;
 .z-1 {
     z-index: -1;
 }
-
+.home_new {
+    max-height: 100vh !important;
+    min-height: 100vh !important;
+}
+.banner-img_new{
+    width: 100%;
+  max-height:110vh;
+  min-height: 100vh;
+       z-index: -1;
+       object-fit: cover;
+       background-position: center;
+       background-size: cover;
+   
+       top: 0%;
+ }
+ /* .banner-img_new{
+    height: 100%;
+ } */
 .home {
-    height: 100vh !important;
-    background-position: right top;
+height: 100vh;
+
+   background-position: right top;
     background-size: cover;
     object-fit: cover;
 position: relative;
