--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1258,7 +1258,7 @@ color: white !important;
     margin: 0px !important ;
     padding: 0px !important;
 height: 90vh;
-background-color: rgba(0, 0, 0, 0.647);
+background-color: rgba(0, 0, 0, 0.402);
    /* background-position: right top; */
     background-size: cover;
     object-fit: cover;
@@ -1311,9 +1311,16 @@ position: relative;
     height: 250px;
     z-index: 1;
 }
-
+.home >div h2 
+{
+    padding: 5px 10px;
+ backdrop-filter: blur(15px);
+    background-color: rgba(255, 255, 255, 0.094);
+}
 .btnhome {
-    position: absolute;
+display: none !important;
+visibility: hidden !important;
+    /* position: absolute; */
     bottom: 67px;
     padding: 5px 15px;
     border-radius: 20px;
