--- a/CSS/style.css
+++ b/CSS/style.css
@@ -42,7 +42,13 @@ padding: 0% !important;
     background-color: #811f1000 !important;
     font-family: var(--font-family) !important;
 }
-
+.form-select {
+    color: white;
+    background-color: #333; /* Optional: Dark background */
+}
+.form-select option:first-child {
+    color: white !important;
+}
 .text-white1 {
 
     color: rgba(230, 230, 230, 0.842) !important;
