--- a/CSS/style.css
+++ b/CSS/style.css
@@ -273,7 +273,13 @@ background-color: black !important;
     background-color: transparent;
 
 }
+@media (max-width:992px) {
+    .btn-red{
 
+        font-size: 16px !important;
+        border-radius: 10% !important;
+    }
+}
 .arr {
     fill: var(--color1) !important;
 }
