--- a/CSS/style.css
+++ b/CSS/style.css
@@ -81,7 +81,11 @@ padding: 0% !important;
 .head-1 {
     font-weight: 600 !important;
 }
-
+@media (max-width:356px) {
+    .head-1{
+        font-size: 28px !important;
+    }
+}
 .topoff>div>ul>li>a {
     text-transform: uppercase;
     color: white !important;
@@ -362,7 +366,7 @@ swiper-container>swiper-slide>img {
 .banner-btn, .banner-btn-hover {
     position: absolute !important;
     width: 100%;
-    height: 100%;
+    height: 100px;
     font-size: 16px !important;
     background-color: white;
     display: flex;
@@ -1348,6 +1352,10 @@ width: 100% !important;
 {
     padding: 5px 10px;
  backdrop-filter: blur(15px);
+    background-color: rgba(255, 255, 255, 0.094);
+}
+.blur{
+    backdrop-filter: blur(15px);
     background-color: rgba(255, 255, 255, 0.094);
 }
 .btnhome {
