--- a/CSS/style.css
+++ b/CSS/style.css
@@ -87,10 +87,10 @@ padding: 0% !important;
     }
 }
 .topoff>div>ul>li>a {
-    text-transform: uppercase;
+    text-transform: capitalize;
     color: white !important;
     font-weight: 600;
-    font-size: 28px !important;
+    font-size: 14px !important;
 }
 
 .topoff {
@@ -362,7 +362,9 @@ swiper-container>swiper-slide>img {
     width: 400px !important;
     background-size: cover !important;
 }
-
+.d_nonoe_Servcie{
+    display: none;
+}
 .banner-btn, .banner-btn-hover {
     position: absolute !important;
     width: 100%;
@@ -1220,6 +1222,7 @@ transition: 0.6s ease-in-out;
 }
 /* Position the Child Dropdown */
 .dropdown-submenu {
+    transition: 0.9s ease-in-out;
     position: relative;
   }
   .navbar .dropdown-menu1>li>.dropdown-item:hover{
