--- a/CSS/style.css
+++ b/CSS/style.css
@@ -119,12 +119,15 @@ bottom: 90px;
     color: var(--bg-color) !important;
     background-color: white;
     padding: 5px 10px;
+    z-index: 11;
     border-radius: 50%;
     font-size: 22px !important;
 }
 .top-header-icon{
     position: absolute;
     bottom: 90px;
+    z-index: 11;
+
 }
 .lets-talk-btn:hover .lets-talk-btn-hover {
     left: 0%;
@@ -645,9 +648,9 @@ input ,textarea {
     position: fixed !important;
     right: 0% !important;
     background-color: var(--bg-color) !important;
-    transition: 0.9s ease-in-out !important;
+    transition: 1.2s ease-in-out !important;
     height: 100vh !important;
-
+width: 85% !important;
     animation: top 0.1s linear !important;
 
 }
@@ -780,7 +783,7 @@ footer {
     color: white !important;
 
 }
-
+ 
 .set-btn {
     font-weight: 600 !important;
     color: var(--bg-color) !important;
@@ -1242,19 +1245,23 @@ color: white !important;
         top: 0% !important;
         display: none; 
         min-width: 200px;
-    
+    transition: 0.6s ease-in-out !important;
         background-color: #f8f9fa;
       }
 }
-  
+
 @media (max-width:992px) {
     .child-dropdown {
     width: 100% !important;
+    transition: 0.6s ease-in-out !important;
+
         background-color: #f8f9fa;
-      }
-      
-      .dropdown-submenu:hover .child-dropdown {
+    }
+    
+    .dropdown-submenu:hover .child-dropdown {
         display: block;
+    transition: 0.6s ease-in-out !important;
+
       }
       
 }
@@ -1262,6 +1269,8 @@ color: white !important;
   .child-dropdown .dropdown-item {
     padding: 8px 15px;
     font-size: 14px;
+    transition: 0.6s ease-in-out !important;
+
   }
   
 /* CHILD DROPDOWN CSS END */
