--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1219,10 +1219,10 @@ height: max-content !important;
     box-shadow: 2px black;
 transition: 0.6s ease-in-out;
 }
-.sub-dropdown-menu:hover{
+.navbar .sub-dropdown-menu:hover{
     display: block;
 }
-.sub-dropdown-menu{
+.navbar .sub-dropdown-menu{
     display: none;
     transition: 0.5s ease-in-out;
 }
@@ -1230,43 +1230,37 @@ transition: 0.6s ease-in-out;
     color: white !important;
 }
 /* Position the Child Dropdown */
-.dropdown-submenu {
+.navbar .dropdown-submenu {
     transition: 0.9s ease-in-out;
     position: relative;
   }
+
   .navbar .dropdown-menu1>li>.dropdown-item:hover{
 background-color: var(--color1) !important;
 color: white !important;
   }
 @media (min-width:992px) {
-    .child-dropdown {
+  .navbar  .child-dropdown {
         position: absolute;
         left: 100%; 
         top: 0% !important;
-        min-width: 200px;
-        transition: 0.6s ease-in-out !important;
-        background-color: #f8f9fa;
         display: none; 
-        opacity: 0;
-      }
-      .dropdown-submenu:hover .child-dropdown {
-        display: block;
+        min-width: 240px;
     transition: 0.6s ease-in-out !important;
-    
+        /* background-color: #f8f9fa; */
       }
 }
 
-@media (max-width:992px) {
-    .child-dropdown {
-    width: 100% !important;
-    transition: 0.6s ease-in-out !important;
-
-        background-color: #f8f9fa;
-    }
-    
+.off_canvas_nav .dropdown-menu{
+    background-color: red;
+    position: absolute;
 }
 
+.navbar .dropdown-submenu:hover .child-dropdown {
+    display: block;
+transition: 0.6s ease-in-out !important;
 
+  }
 
   .child-dropdown .dropdown-item {
     padding: 8px 15px;
