--- a/CSS/style.css
+++ b/CSS/style.css
@@ -156,7 +156,7 @@ bottom: 90px;
 
 /* MEDIA QUIRES */
 
-.navbar {
+.large_nav {
     margin: 0px;
     padding: 0%;
     background-color: rgba(255, 255, 255, 0.986) !important;
