--- a/CSS/style.css
+++ b/CSS/style.css
@@ -251,7 +251,7 @@ background-color: black !important;
     height: 10vh !important;
 }
 
-.topbtnfix {
+. {
     color: white;
     padding: 15px 10px !important;
     position: fixed;
