--- a/CSS/style.css
+++ b/CSS/style.css
@@ -71,6 +71,7 @@ padding: 0% !important;
 .cardInfo p{
     font-size: 15px !important;
 }
+
 .form-select {
     color: white !important;
     background-color: #333;  
@@ -975,23 +976,6 @@ footer {
     background-color: var(--bg-color) !important;
 }
 
-.navbar .dropdown-menu>li>.dropdown-item:hover {
-    background-color: var(--color1);
-    color: white !important;
-}
-
-.navbar .dropdown-menu {
-    padding:10px 5px !important;
-    background-color: white !important;
-visibility: visible !important;
-opacity: 0;
-}
-.navbar .dropdown:hover  .dropdown-menu{
-  opacity: 1;
-  display: block;
-}
-
-
 
 .nav-item>.nav-link {
     color: white;
@@ -1012,19 +996,6 @@ footer .nav-item>.nav-link:hover {
     border-bottom: 1px solid white;
 }
 
-.navhover {
-    /* background-color: #bb9108 !important; */
-    position: absolute !important;
-    top: 0px;
-    width: 0%;
-    color: var(--color1) !important;
-    z-index: -22 !important;
-    bottom: 0px;
-
-    transition: 0.5s ease-in-out !important;
-
-    border-bottom: 2px solid var(--color1) !important;
-}
 
 .nav-item:hover .navhover {
     top: 0px !important;
@@ -1252,54 +1223,24 @@ height: max-content !important;
 
 }
 /* CHILD DROPDOWN CSS START */
-.navbar .dropdown-menu1{
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-    background-color: white;
-    box-shadow: 2px black;
-transition: 0.6s ease-in-out;
-}
-.navbar .sub-dropdown-menu:hover{
-    display: block;
-}
-.navbar .sub-dropdown-menu{
-    display: none;
-    transition: 0.5s ease-in-out;
-}
+
 .offcanvas-body .nav-item > .nav-link{
     color: white !important;
 }
 /* Position the Child Dropdown */
-.navbar .dropdown-submenu {
-    transition: 0.9s ease-in-out;
-    position: relative;
-  }
+
 
   .navbar .dropdown-menu1>li>.dropdown-item:hover{
 background-color: var(--color1) !important;
 color: white !important;
   }
-@media (min-width:992px) {
-  .navbar  .child-dropdown {
-        position: absolute;
-        left: 100%; 
-        top: 0% !important;
-        display: none; 
-        min-width: 240px;
-    transition: 0.6s ease-in-out !important;
-        /* background-color: #f8f9fa; */
-      }
-}
 
 .off_canvas_nav .dropdown-menu{
     background-color: red;
     position: absolute;
 }
 
-.navbar .dropdown-submenu:hover .child-dropdown {
-    display: block;
-transition: 0.6s ease-in-out !important;
 
-  }
 
  .navbar .child-dropdown .dropdown-item {
     padding: 8px 15px;
@@ -1599,3 +1540,37 @@ overflow-x: hidden !important;
 }
 
 /* ================ NEW ADDTITION END ============== */
+
+/* =================== SERVICE DROPDOWN START  ============================== */
+.large_nav .dropdown:hover .dropdown-menu {
+    z-index: 2111111 !important;
+    display: inline-block !important;
+    padding-bottom: 30px;
+    z-index: 31111 !important;
+}.large_nav .dropdown-menu {
+    z-index: 934222 !important;
+    padding: 10px !important;
+    margin: 0% 4% !important;
+    left: 0% !important;
+    position: fixed !important;
+    transition: 0.1s ease-in-out !important;
+    width: 95vw !important;
+    display: none !important;
+}
+.dropdown-menu {
+    position: absolute;
+    z-index: 1000;
+    display: none;
+    min-width: 10rem;
+    padding: .5rem 0;
+    margin: 0;
+    font-size: 1rem;
+    color: #212529;
+    text-align: left;
+    list-style: none;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid rgba(0, 0, 0, .15);
+    border-radius: .25rem;
+}
+/* =================== SERVICE DROPDOWN END ================================== */
