--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1172,10 +1172,8 @@ footer {
 }
 
 .home_new {
-    background-color: rgba(255, 0, 0, 0.24) !important;
-    width: 100%;
-    max-height: 110vh !important;
-    min-height: 100vh !important;
+     width: 100%;
+height: 90vh !important;
 }
 
 .banner-img_new {
