--- a/CSS/style.css
+++ b/CSS/style.css
@@ -288,7 +288,10 @@ iframe {
         border-radius: 10% !important;
     }
 }
-
+.sdsd .dropdown .btn{
+  
+    font-size: 18px !important;
+}
 .arr {
     fill: var(--color1) !important;
 }
@@ -1159,7 +1162,7 @@ footer {
 }
 
 .child-dropdown .dropdown-item {
-    padding: 8px 15px;
+    padding: 6px 15px;
     font-size: 14px;
     transition: 0.6s ease-in-out !important;
 }
@@ -1513,9 +1516,9 @@ CSS
         z-index: 934222 !important;
         transition: 0.1s ease-in-out !important;
         left: 0% !important;
-        margin: 0% 4% !important;
+        margin: 0% 1% !important;
      position: fixed !important;
-     width: 91vw !important;
+     width: 96vw !important;
   
 }
 }
