--- a/CSS/style.css
+++ b/CSS/style.css
@@ -356,7 +356,7 @@ iframe {
     overflow: hidden;
 }
 
-swiper-container > swiper-slide > img {
+.roun swiper-container > swiper-slide > img {
     height: 80px !important;
     object-fit: cover !important;
     width: 400px !important;
@@ -1405,11 +1405,11 @@ img {
 
 
 /* MARQUE SLIDER START */
-swiper-container {
+.roun swiper-container {
     width: 95vw !important;
 }
 
-swiper-slide {
+.roun swiper-slide {
     text-align: center;
     font-size: 18px;
     background: #fff;
@@ -1418,7 +1418,7 @@ swiper-slide {
     align-items: center;
 }
 
-    swiper-slide img {
+   .roun  swiper-slide img {
         display: block;
         width: 100%;
         height: 100%;
@@ -1539,3 +1539,53 @@ CSS
     border-radius: .25rem;
 }
 /* =================== SERVICE DROPDOWN END ================================== */
+
+
+/* ==================== HOME SLIDEWR CODE START ========================= */
+   /* SWIPER CSS START  */
+/* Swiper container settings */
+.foodprints_section .swiper {
+    width: 100%;
+    max-width: 100%;
+   padding-bottom: 50px !important;
+
+  }
+.foodprints_section .swiper-slide img{
+    background-size: cover;
+    object-fit:cover;
+background-position: center;
+    height: 250px !important;
+}
+  .foodprints_section .swiper-slide {
+    transition: 0.6s ease-in-out !important;
+    background: #ccc;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    height: 250px;
+    width: 28%;
+    border-radius: 10px;
+  }
+
+  /* Pagination bullets */
+  .foodprints_section .swiper-pagination-bullet {
+    transition: 0.6s ease-in-out !important;
+    padding: 10px;
+    border-radius: 40px !important;
+    background-color: #48505c !important;
+    opacity: 1;
+  }
+
+  .foodprints_section .swiper-pagination-bullet-active {
+    transition: 0.6s ease-in-out !important;
+
+    padding: 10px 20px;
+    border-radius: 40px !important;
+    background-color: var(--color1) !important;
+  }
+  #hidden.bs.collapse{
+    transition: 0.5s ease-in-out ;
+  }
+/* SWIPER CSS END  */
+/* ==================== HOME SLIDERWR CODE END ===================================== */
