--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1545,8 +1545,8 @@ CSS
    /* SWIPER CSS START  */
 /* Swiper container settings */
 .foodprints_section .swiper {
-    width: 100%;
-    max-width: 100%;
+    width: 95%;
+    max-width: 95%;
    padding-bottom: 50px !important;
 
   }
@@ -1554,17 +1554,17 @@ CSS
     background-size: cover;
     object-fit:cover;
 background-position: center;
-    height: 250px !important;
+    height: 300px !important;
 }
   .foodprints_section .swiper-slide {
     transition: 0.6s ease-in-out !important;
-    background: #ccc;
+    background: #ffffff;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 24px;
-    height: 250px;
-    width: 28%;
+    /* height: 350px; */
+    /* width: 28%; */
     border-radius: 10px;
   }
 
@@ -1573,7 +1573,7 @@ background-position: center;
     transition: 0.6s ease-in-out !important;
     padding: 10px;
     border-radius: 40px !important;
-    background-color: #48505c !important;
+    background-color: #ffffff !important;
     opacity: 1;
   }
 
