--- a/CSS/style.css
+++ b/CSS/style.css
@@ -24,6 +24,7 @@
     --border-col: #1818182f;
     --bg-color: #1A1A1A;
     --color-round: rgba(220, 220, 220, 0.966);
+    --para-bg: #ebebeb;
 }
 /* LIGHT THEME */
 [data-theme="light"] {
@@ -550,27 +551,31 @@ a:hover, button:hover {
     background-color: #252525 !important;
 }
 
-select {
+.form_of_contact_us_section  select {
     color: var(--para-color) !important;
+    background-color: var(--para-bg);
 }
 
-input, textarea {
-    color: white !important;
-}
 
-.form-control::placeholder {
+.form_of_contact_us_section .form-control::placeholder {
     font-weight: 300 !important;
-    color: rgb(255, 255, 255) !important;
+    color: rgb(12, 3, 3) !important;
 }
 
-.form-control, select, textarea {
-    border: none !important;
+.form_of_contact_us_section  .form-control, select, textarea {
+  
+border: 1px solid #d3d3d3 !important;
+    border-radius: 6px !important;
+    padding:10px 8px;
+    background-color: var(--para-bg);
+}
+
+.form_of_contact_us_section .iti{
+        border: none !important;
     border-radius: 0% !important;
     border-bottom: 1px solid rgba(211, 211, 211, 0.349) !important;
-    background-color: var(--bg-color) !important;
+background-color: var(--para-bg) !important;
 }
-
-
 
 .navfix {
     position: fixed !important;
@@ -705,7 +710,7 @@ input, textarea {
     color: var(--para-color);
 }
 .para_bg{
-   background-color: #ebebeb !important;
+   background-color:var(--para-bg) !important;
 }
 footer {
     background-size: cover;
@@ -733,7 +738,7 @@ footer {
     transition: 0.9s ease-in-out !important;
 }
 .col-22 {
-    height: 100% !important;
+    height:450px  !important;
     border-right: 1px solid white !important;
 }
 
@@ -1304,7 +1309,7 @@ img {
     position: absolute;
     opacity: 1 !important;
     outline: none;
-    background-color: var(--bg-color) !important;
+    /* background-color: var(--bg-color) !important; */
 }
 
     .iti .iti__selected-dial-code {
